# swagger

./: README.md  license.txt  pyproject.toml  setup.py
swagger/: __init__.py  api_logger.py  exceptions.py  hooks.py  modules.txt  responder.py  swagger_generator.py  validator.py
swagger/swagger_ui/doctype/api_error_log/: api_error_log.js  api_error_log.json  api_error_log.py  api_error_log_list.js  test_api_error_log.py
swagger/swagger_ui/doctype/swagger_settings/: swagger_settings.js  swagger_settings.json  swagger_settings.py  test_swagger_settings.py
swagger/www/: swagger.html  swagger.json
